Optimize the noise fill, fix aquifer cache exactness, and apply review fixes
Worldgen CPU (analysis/optimization-2026-09-24.md,
analysis/worldgen-big-2026-09-25.md), each exact with a kill switch and
a lockstep verify flag:
- Flat climate R-tree search, biome fiddle cache and cell path, ore
  random reuse, fewer scheduler allocations.
- Per-cell lerp tables for NoiseInterpolator reads (bit-identical to
  Mth.lerp3).
- Bulk constant-factor multiply in DFC's compiled mul(constant, cache).
- Air-cell skip: provably all-air noise cells answer AIR without the
  per-block work; stands down when another mod hooks the fill.
Paired CPU pregen (r1024) against the previous build: -3.6% CPU per
chunk, +6.0% chunks/s. GPU mode is flat.

Aquifer cell cache fix: vanilla's computeFluid for one cell depends on
whether the cell lies in the asking chunk's flat-cache grid, so the
cross-chunk cache let the first chunk decide for its neighbours (5-7
chunks per r512 pregen differed from vanilla and between runs). The key
now carries that variant, early returns are shared by both, sharing is
decided per RandomState from the router (AquiferCellSharing) and stands
down when another mod hooks the code involved. Found by the new per-chunk
noise-fill hash (-Dsuperchunk.debug.noiseFillHash, tools/noisehashdiff.py).

Review fixes (analysis/review-2026-09-25.md): chunks saved only on unload,
chunk waits hanging on a broken neighbour (the JJThunder freeze,
analysis/jjthunder-freeze-2026-09-25.md), swapped sequence helpers,
shutdown flush pumping, GPU batch route checks and completer parking,
per-method foreign-mixin detection (MixinTargetScan) for the stand-downs,
optional-target mixins, incompatibility metadata, and quiet logging by
default (logging.verbose). The benchmark harness takes --datapack.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>